--- a/src/components/shared/Loading/loading.css
+++ b/src/components/shared/Loading/loading.css
@@ -6,14 +6,14 @@
   justify-content: center;
 }
 
-ul {
+#loadingUl {
   width: 108px;
   height: 108px;
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
 }
-ul li {
+#loadingUl li {
   width: 30px;
   height: 30px;
   margin: 2px;
@@ -21,31 +21,31 @@ ul li {
   animation: loading 0.8s infinite;
 }
 
-ul li:nth-child(5) {
+#loadingUl li:nth-child(5) {
   opacity: 0;
 }
-ul li:nth-child(1) {
+#loadingUl li:nth-child(1) {
   animation-delay: 0.1s;
 }
-ul li:nth-child(2) {
+#loadingUl li:nth-child(2) {
   animation-delay: 0.2s;
 }
-ul li:nth-child(3) {
+#loadingUl li:nth-child(3) {
   animation-delay: 0.3s;
 }
-ul li:nth-child(6) {
+#loadingUl li:nth-child(6) {
   animation-delay: 0.4s;
 }
-ul li:nth-child(9) {
+#loadingUl li:nth-child(9) {
   animation-delay: 0.5s;
 }
-ul li:nth-child(8) {
+#loadingUl li:nth-child(8) {
   animation-delay: 0.6s;
 }
-ul li:nth-child(7) {
+#loadingUl li:nth-child(7) {
   animation-delay: 0.7s;
 }
-ul li:nth-child(4) {
+#loadingUl li:nth-child(4) {
   animation-delay: 0.8s;
 }
 @keyframes loading {
