--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -7,3 +7,40 @@
 main {
   flex: 1;
 }
+
+.errorModalBackdrop {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: #00000027;
+  z-index: 1200;
+}
+
+.errorModalWrapper {
+  box-shadow: 1px 0px 10px 3px #eeeeee;
+  min-width: 250px;
+  border-radius: 6px;
+  padding: 24px;
+  background-color: #fff;
+  z-index: 1201;
+}
+
+.errorModalTitle {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 24px;
+}
+
+.errorModalCloseBtn {
+  margin-top: 12px;
+  justify-content: flex-end;
+  display: flex;
+  width: 100%;
+}
